k3s/rancher-demo-blinkt-manifests/white.yaml
# Source: rancher-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rgs-white-rancher-demo
  labels:
    app.kubernetes.io/name: rancher-white
    app.kubernetes.io/instance: rgs-w
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: rancher-white
    app.kubernetes.io/instance: rgs-w
---
# Source: rancher-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rgs-w-rancher-demo
  labels:
    app.kubernetes.io/name: rancher-white
    app.kubernetes.io/instance: rgs-w
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-white
      app.kubernetes.io/instance: rgs-w
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-white
        app.kubernetes.io/instance: rgs-w
        blinkt: show
        blinktColor: FFFFFF
    spec:
      securityContext:
        {}
      containers:
        - name: rancher-white
          securityContext:
            {}
          image: "bgulla/rancher-demo:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 4m
              memory: 485Mi
            limits:
              memory: 485Mi

---
# Source: rancher-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgs-white-rancher-demo
  labels:
    app.kubernetes.io/name: rancher-white
    app.kubernetes.io/instance: rgs-w
spec:
  rules:
    - host: "rancher-demo.white.k3s.example.home"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: rgs-white-rancher-demo
                port:
                  number: 80
